@@ -10,17 +10,18 @@ import static org.junit.Assert.*;
 public class UnitOfMeasureCommandToUnitOfMeasureTest {
 
     public static final String DESCRIPTION = "description";
-    public static final Long LONG_VALUE = Long.valueOf(1L);
+    public static final Long LONG_VALUE = new Long(1L);
 
     UnitOfMeasureCommandToUnitOfMeasure converter;
 
     @Before
     public void setUp() throws Exception {
         converter = new UnitOfMeasureCommandToUnitOfMeasure();
+
     }
 
     @Test
-    public void testNullParameter() throws Exception {
+    public void testNullParamter() throws Exception {
         assertNull(converter.convert(null));
     }
 
@@ -43,5 +44,7 @@ public class UnitOfMeasureCommandToUnitOfMeasureTest {
         assertNotNull(uom);
         assertEquals(LONG_VALUE, uom.getId());
         assertEquals(DESCRIPTION, uom.getDescription());
+
     }
+
 }
